// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RepostHeader - Snapshots > matches snapshot when undoing 1`] = `
<div
  class="flex items-center justify-between rounded-t-md bg-muted px-4 py-3"
  data-override-defaults="true"
  data-testid="repost-header"
>
  <div
    class="flex items-center gap-3"
    data-override-defaults="true"
    data-testid="container"
  >
    <svg
      aria-label="Repeat"
      class="lucide lucide-repeat size-5"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m17 2 4 4-4 4"
      />
      <path
        d="M3 11v-1a4 4 0 0 1 4-4h14"
      />
      <path
        d="m7 22-4-4 4-4"
      />
      <path
        d="M21 13v1a4 4 0 0 1-4 4H3"
      />
    </svg>
    <span
      class="text-base font-bold text-foreground"
      data-testid="typography"
    >
      You reposted
    </span>
  </div>
  <button
    aria-label="Undoing repost..."
    class="h-auto px-0 text-destructive hover:bg-transparent hover:text-destructive"
    data-testid="repost-undo-button"
    disabled=""
  >
    Undoing...
  </button>
</div>
`;

exports[`RepostHeader - Snapshots > matches snapshot with default props 1`] = `
<div
  class="flex items-center justify-between rounded-t-md bg-muted px-4 py-3"
  data-override-defaults="true"
  data-testid="repost-header"
>
  <div
    class="flex items-center gap-3"
    data-override-defaults="true"
    data-testid="container"
  >
    <svg
      aria-label="Repeat"
      class="lucide lucide-repeat size-5"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m17 2 4 4-4 4"
      />
      <path
        d="M3 11v-1a4 4 0 0 1 4-4h14"
      />
      <path
        d="m7 22-4-4 4-4"
      />
      <path
        d="M21 13v1a4 4 0 0 1-4 4H3"
      />
    </svg>
    <span
      class="text-base font-bold text-foreground"
      data-testid="typography"
    >
      You reposted
    </span>
  </div>
  <button
    aria-label="Undo repost"
    class="h-auto px-0 text-destructive hover:bg-transparent hover:text-destructive"
    data-testid="repost-undo-button"
  >
    Undo repost
  </button>
</div>
`;
